--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Head info
 head:
-    favicon: "/img/favicon.png"
-    high_res_favicon: "/img/favicon.png"
-    apple_touch_icon: "/img/favicon.png"
+    favicon: "/img/miao.png"
+    high_res_favicon: "/img/miao.png"
+    apple_touch_icon: "/img/miao.png"
     keywords:
 
 # Jump Links Settings
@@ -67,8 +67,8 @@ background:
 
 # Images Settings
 img:
-    logo: "/img/logo.png"
-    avatar: "/img/avatar.png"
+    logo: "/img/miao.png"
+    avatar: "/img/miao.png"
     daily_pic: "/img/daily_pic.png"
     sidebar_header: "/img/sidebar_header.png"
     footerico: "/img/footer/footer_ico-"
